# llm-repl

./: Cargo.toml  LICENSE.md  Readme.md
src/: error.rs  main.rs  render.rs  repl.rs  server.rs  shell.rs  signal.rs  state.rs
src/commands/: help.rs  llmconvo.rs  markdown.rs  mod.rs  model.rs  provider.rs  reader.rs  theme.rs
src/providers/: gemini.rs  groq.rs  mod.rs  ollama.rs
