[package]
name = "llm-repl"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio-serde = { version = "0.8", features = ["json"] } 
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json","stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
clap = { version = "4.0", features = ["derive", "env"] }
rustyline = "12.0"
url = "2.4"
dialoguer = { version = "0.11", features = ["fuzzy-select","editor"] }
futures = "0.3"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
termimad = "0.26"
strum = "0.26" # Or latest compatible version
strum_macros = "0.26" # Or latest compatible version
colored = "2.1" 
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] } # Optional, for cleaner Tokio integration later if needed
lazy_static = "1.4" # For the global atomic bool
bytes="1"
